test: corrige e amplia cobertura do PedidoServiceTest