@@ -1,5 +1,6 @@
 package com.dtidigital.simulador.service;
 
+import com.dtidigital.simulador.dto.PedidoDTO;
 import com.dtidigital.simulador.exception.ResourceNotFoundException;
 import com.dtidigital.simulador.model.*;
 import com.dtidigital.simulador.repository.DroneRepository;
@@ -12,6 +13,7 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.*;
+import java.util.concurrent.atomic.AtomicReference;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -61,11 +63,47 @@ class PedidoServiceTest {
                 .thenReturn(Optional.empty());
     }
 
+
     @Test
     void deveCalcularDistanciaEuclidianaDaBase() {
         double distancia = pedidoService.calcularDistanciaDaBase(3.0, 4.0);
         assertThat(distancia).isEqualTo(5.0);
     }
+
+    @Test
+    void deveCriarPedidoJaAlocandoDroneDisponivel() {
+        PedidoDTO dto = new PedidoDTO();
+        dto.setCoordenadaX(3.0);
+        dto.setCoordenadaY(4.0);
+        dto.setPeso(2.0);
+        dto.setPrioridade(Prioridade.ALTA);
+
+        Drone drone = criarDrone("d1", 5.0, 20.0, 20.0);
+        AtomicReference<Pedido> salvo = new AtomicReference<>();
+
+        when(pedidoRepository.save(any(Pedido.class))).thenAnswer(inv -> {
+            Pedido p = inv.getArgument(0);
+            if (p.getId() == null) {
+                p.setId("p1");
+            }
+            salvo.set(p);
+            return p;
+        });
+        when(pedidoRepository.findAll())
+                .thenAnswer(inv -> salvo.get() == null ? List.of() : List.of(salvo.get()));
+        when(pedidoRepository.findById("p1")).thenAnswer(inv -> Optional.ofNullable(salvo.get()));
+        when(droneRepository.findByStatus(StatusDrone.IDLE)).thenReturn(List.of(drone));
+
+        Pedido resultado = pedidoService.criarPedido(dto);
+
+        assertThat(resultado.getStatus()).isEqualTo(StatusPedido.EM_TRANSPORTE);
+        assertThat(resultado.getDroneAlocado()).isEqualTo(drone);
+        // ida + volta = 10 km a 30 km/h = 20 minutos
+        assertThat(resultado.getTempoEstimadoMinutos()).isEqualTo(20.0);
+        assertThat(resultado.getDistanciaRotaKm()).isEqualTo(10.0);
+        assertThat(resultado.getViagemId()).isNotNull();
+    }
+
 
     @Test
     void deveAlocarDroneCompativelParaPedidoPendente() {
@@ -81,7 +119,6 @@ class PedidoServiceTest {
         assertThat(pedido.getDroneAlocado()).isEqualTo(drone);
         assertThat(pedido.getMotivoBloqueio()).isNull();
         assertThat(drone.getStatus()).isEqualTo(StatusDrone.EM_VOO);
-        // distancia (3,4) = 5km, ida e volta = 10km, bateria deve cair de 20 para 10
         assertThat(drone.getBateriaAtual()).isEqualTo(10.0);
     }
 
@@ -97,12 +134,13 @@ class PedidoServiceTest {
 
         assertThat(pedido.getStatus()).isEqualTo(StatusPedido.PENDENTE);
         assertThat(pedido.getDroneAlocado()).isNull();
+        assertThat(drone.getStatus()).isEqualTo(StatusDrone.IDLE);
     }
 
     @Test
     void naoDeveAlocarDroneQuandoBateriaInsuficiente() {
         Pedido pedido = criarPedidoPendente("p1", 50.0, 0.0, 2.0, Prioridade.ALTA);
-        Drone drone = criarDrone("d1", 5.0, 20.0, 20.0); // ida+volta = 100km > 20km de autonomia
+        Drone drone = criarDrone("d1", 5.0, 20.0, 20.0); 
 
         when(pedidoRepository.findAll()).thenReturn(List.of(pedido));
         when(droneRepository.findByStatus(StatusDrone.IDLE)).thenReturn(List.of(drone));
@@ -114,15 +152,81 @@ class PedidoServiceTest {
     }
 
     @Test
-    void deveDarPrioridadeParaEntregaDeMaiorPrioridadeQuandoHaUmSoDrone() {
-        Pedido pedidoBaixa = criarPedidoPendente("p1", 1.0, 0.0, 1.0, Prioridade.BAIXA);
-        Pedido pedidoAlta = criarPedidoPendente("p2", 2.0, 0.0, 1.0, Prioridade.ALTA);
+    void deveManterPedidoNaFilaQuandoNaoHaDroneDisponivel() {
+        Pedido pedido = criarPedidoPendente("p1", 1.0, 0.0, 1.0, Prioridade.ALTA);
+
+        when(pedidoRepository.findAll()).thenReturn(List.of(pedido));
+        when(droneRepository.findByStatus(StatusDrone.IDLE)).thenReturn(List.of());
+
+        pedidoService.processarFila();
+
+        assertThat(pedido.getStatus()).isEqualTo(StatusPedido.PENDENTE);
+        assertThat(pedido.getDroneAlocado()).isNull();
+    }
+
+
+    @Test
+    void deveConsolidarVariosPedidosNaMesmaViagemQuandoCabemNoDrone() {
+        Pedido p1 = criarPedidoPendente("p1", 1.0, 0.0, 2.0, Prioridade.MEDIA);
+        Pedido p2 = criarPedidoPendente("p2", 2.0, 0.0, 2.0, Prioridade.MEDIA);
+        Drone drone = criarDrone("d1", 5.0, 20.0, 20.0);
+
+        when(pedidoRepository.findAll()).thenReturn(List.of(p1, p2));
+        when(droneRepository.findByStatus(StatusDrone.IDLE)).thenReturn(List.of(drone));
+
+        pedidoService.processarFila();
+
+        assertThat(p1.getStatus()).isEqualTo(StatusPedido.EM_TRANSPORTE);
+        assertThat(p2.getStatus()).isEqualTo(StatusPedido.EM_TRANSPORTE);
+        assertThat(p1.getViagemId()).isNotNull().isEqualTo(p2.getViagemId());
+        // rota base -> (1,0) -> (2,0) -> base = 4 km
+        assertThat(drone.getBateriaAtual()).isEqualTo(16.0);
+        assertThat(p1.getDistanciaRotaKm()).isEqualTo(4.0);
+    }
+
+    @Test
+    void naoDeveExcederCapacidadeDoDroneAoConsolidarViagem() {
+        Pedido p1 = criarPedidoPendente("p1", 1.0, 0.0, 4.0, Prioridade.ALTA);
+        Pedido p2 = criarPedidoPendente("p2", 2.0, 0.0, 4.0, Prioridade.ALTA);
+        Drone drone = criarDrone("d1", 5.0, 20.0, 20.0);
+
+        when(pedidoRepository.findAll()).thenReturn(List.of(p1, p2));
+        when(droneRepository.findByStatus(StatusDrone.IDLE)).thenReturn(List.of(drone));
+
+        pedidoService.processarFila();
+
+        assertThat(p1.getStatus()).isEqualTo(StatusPedido.EM_TRANSPORTE);
+        assertThat(p2.getStatus()).isEqualTo(StatusPedido.PENDENTE);
+    }
+
+    @Test
+    void deveDistribuirPedidosEntreVariosDronesQuandoNaoCabemNaMesmaViagem() {
+        Pedido p1 = criarPedidoPendente("p1", 1.0, 0.0, 4.0, Prioridade.ALTA);
+        Pedido p2 = criarPedidoPendente("p2", 2.0, 0.0, 4.0, Prioridade.ALTA);
+        Pedido p3 = criarPedidoPendente("p3", 3.0, 0.0, 4.0, Prioridade.ALTA);
+        Drone d1 = criarDrone("d1", 5.0, 20.0, 20.0);
+        Drone d2 = criarDrone("d2", 5.0, 20.0, 20.0);
+
+        when(pedidoRepository.findAll()).thenReturn(List.of(p1, p2, p3));
+        when(droneRepository.findByStatus(StatusDrone.IDLE)).thenReturn(List.of(d1, d2));
+
+        pedidoService.processarFila();
+
+        assertThat(p1.getDroneAlocado()).isEqualTo(d1);
+        assertThat(p2.getDroneAlocado()).isEqualTo(d2);
+        assertThat(p3.getStatus()).isEqualTo(StatusPedido.PENDENTE);
+        assertThat(p1.getViagemId()).isNotEqualTo(p2.getViagemId());
+    }
+
+
+    @Test
+    void deveAtenderPedidoDeMaiorPrioridadePrimeiroQuandoNaoCabemNaMesmaViagem() {
+        Pedido pedidoBaixa = criarPedidoPendente("p1", 1.0, 0.0, 4.0, Prioridade.BAIXA);
+        Pedido pedidoAlta = criarPedidoPendente("p2", 2.0, 0.0, 4.0, Prioridade.ALTA);
         Drone drone = criarDrone("d1", 5.0, 20.0, 20.0);
 
         when(pedidoRepository.findAll()).thenReturn(List.of(pedidoBaixa, pedidoAlta));
-        when(droneRepository.findByStatus(StatusDrone.IDLE))
-                .thenReturn(new ArrayList<>(List.of(drone)))
-                .thenReturn(Collections.emptyList());
+        when(droneRepository.findByStatus(StatusDrone.IDLE)).thenReturn(List.of(drone));
 
         pedidoService.processarFila();
 
@@ -130,12 +234,15 @@ class PedidoServiceTest {
         assertThat(pedidoBaixa.getStatus()).isEqualTo(StatusPedido.PENDENTE);
     }
 
+
     @Test
     void deveBloquearPedidoCujaRotaCruzaZonaDeExclusao() {
         Pedido pedido = criarPedidoPendente("p1", 6.0, 6.0, 2.0, Prioridade.ALTA);
+        Drone drone = criarDrone("d1", 5.0, 20.0, 20.0);
         ZonaExclusao zona = new ZonaExclusao("z1", "Aeroporto", 5.0, 5.0, 3.0);
 
         when(pedidoRepository.findAll()).thenReturn(List.of(pedido));
+        when(droneRepository.findByStatus(StatusDrone.IDLE)).thenReturn(List.of(drone));
         when(zonaExclusaoService.verificarBloqueio(0.0, 0.0, 6.0, 6.0)).thenReturn(Optional.of(zona));
 
         pedidoService.processarFila();
@@ -143,25 +250,52 @@ class PedidoServiceTest {
         assertThat(pedido.getStatus()).isEqualTo(StatusPedido.PENDENTE);
         assertThat(pedido.getMotivoBloqueio()).contains("Aeroporto");
         assertThat(pedido.getDroneAlocado()).isNull();
-        verify(droneRepository, never()).findByStatus(any());
+        assertThat(drone.getStatus()).isEqualTo(StatusDrone.IDLE);
+        assertThat(drone.getBateriaAtual()).isEqualTo(20.0);
     }
 
     @Test
     void deveLiberarDroneEMarcarPedidoComoEntregueAoConcluir() {
         Drone drone = criarDrone("d1", 5.0, 20.0, 10.0);
-        drone.setStatus(StatusDrone.ENTREGANDO);
+        drone.setStatus(StatusDrone.EM_VOO);
 
         Pedido pedido = criarPedidoPendente("p1", 3.0, 4.0, 2.0, Prioridade.MEDIA);
         pedido.setStatus(StatusPedido.EM_TRANSPORTE);
         pedido.setDroneAlocado(drone);
+        pedido.setViagemId("v1");
 
         when(pedidoRepository.findById("p1")).thenReturn(Optional.of(pedido));
-        when(pedidoRepository.findAll()).thenReturn(Collections.emptyList());
+        when(pedidoRepository.findAll()).thenReturn(List.of(pedido));
 
         Pedido concluido = pedidoService.concluirEntrega("p1");
 
         assertThat(concluido.getStatus()).isEqualTo(StatusPedido.ENTREGUE);
         assertThat(drone.getStatus()).isEqualTo(StatusDrone.IDLE);
+    }
+
+    @Test
+    void naoDeveLiberarDroneEnquantoHouverPedidosDaMesmaViagemEmTransporte() {
+        Drone drone = criarDrone("d1", 10.0, 20.0, 10.0);
+        drone.setStatus(StatusDrone.EM_VOO);
+
+        Pedido p1 = criarPedidoPendente("p1", 1.0, 0.0, 2.0, Prioridade.MEDIA);
+        p1.setStatus(StatusPedido.EM_TRANSPORTE);
+        p1.setDroneAlocado(drone);
+        p1.setViagemId("v1");
+
+        Pedido p2 = criarPedidoPendente("p2", 2.0, 0.0, 2.0, Prioridade.MEDIA);
+        p2.setStatus(StatusPedido.EM_TRANSPORTE);
+        p2.setDroneAlocado(drone);
+        p2.setViagemId("v1");
+
+        when(pedidoRepository.findById("p1")).thenReturn(Optional.of(p1));
+        when(pedidoRepository.findAll()).thenReturn(List.of(p1, p2));
+
+        pedidoService.concluirEntrega("p1");
+
+        assertThat(p1.getStatus()).isEqualTo(StatusPedido.ENTREGUE);
+        assertThat(p2.getStatus()).isEqualTo(StatusPedido.EM_TRANSPORTE);
+        assertThat(drone.getStatus()).isEqualTo(StatusDrone.EM_VOO);
     }
 
     @Test
@@ -177,6 +311,7 @@ class PedidoServiceTest {
         Pedido entregue = criarPedidoPendente("p1", 3.0, 4.0, 1.0, Prioridade.ALTA);
         entregue.setStatus(StatusPedido.ENTREGUE);
         entregue.setTempoEstimadoMinutos(20.0);
+        entregue.setViagemId("v1");
 
         Pedido pendente = criarPedidoPendente("p2", 1.0, 1.0, 1.0, Prioridade.BAIXA);
 
@@ -190,5 +325,6 @@ class PedidoServiceTest {
         assertThat(dashboard.get("pedidosNaFila")).isEqualTo(1L);
         assertThat(dashboard.get("tempoMedioMinutos")).isEqualTo(20.0);
         assertThat(dashboard.get("totalDrones")).isEqualTo(1);
+        assertThat(dashboard.get("totalViagens")).isEqualTo(1L);
     }
 }
